--- a/Basketball/src/user_interface/Win.fxml
+++ b/Basketball/src/user_interface/Win.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="790.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="790.0" style="-fx-background-color: #FF8000;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -48,10 +47,10 @@
             <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <TextField GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <TextField GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <Button mnemonicParsing="false" prefWidth="52.0" text="NEW" GridPane.rowIndex="8" />
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="56.0" text="SAVE" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-            <Button mnemonicParsing="false" text="IMAGE" GridPane.rowIndex="9" />
-            <Button mnemonicParsing="false" text="DELATE" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" style="-fx-background-color: #000000;" text="NEW" textFill="WHITE" GridPane.rowIndex="8" />
+            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="99.0" style="-fx-background-color: #000000;" text="SAVE" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" style="-fx-background-color: #000000;" text="IMAGE" textFill="WHITE" GridPane.rowIndex="9" />
+            <Button fx:id="delate" mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" style="-fx-background-color: #000000;" text="DELATE" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="9" />
          </children>
       </GridPane>
    </center>
@@ -61,10 +60,10 @@
             <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
          </center>
          <left>
-            <Button mnemonicParsing="false" text="BEFORE" BorderPane.alignment="CENTER" />
+            <Button mnemonicParsing="false" style="-fx-background-color: #000000;" text="BEFORE" textFill="WHITE" BorderPane.alignment="CENTER" />
          </left>
          <right>
-            <Button mnemonicParsing="false" text="NEXT" BorderPane.alignment="CENTER" />
+            <Button mnemonicParsing="false" style="-fx-background-color: #000000;" text="NEXT" textFill="WHITE" BorderPane.alignment="CENTER" />
          </right>
       </BorderPane>
    </left>
@@ -78,13 +77,13 @@
    <bottom>
       <BorderPane prefHeight="57.0" prefWidth="598.0" BorderPane.alignment="CENTER">
          <left>
-            <ComboBox prefHeight="26.0" prefWidth="204.0" promptText="CHOOSE A TYPE OF SEARCH" BorderPane.alignment="CENTER" />
+            <ComboBox prefHeight="26.0" prefWidth="280.0" promptText="CHOOSE A TYPE OF SEARCH" style="-fx-background-color: #000000;" BorderPane.alignment="CENTER" />
          </left>
          <center>
             <TextField BorderPane.alignment="CENTER" />
          </center>
          <right>
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="250.0" text="SEARCH" BorderPane.alignment="CENTER" />
+            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="183.0" style="-fx-background-color: #000000;" text="SEARCH" textFill="WHITE" BorderPane.alignment="CENTER" />
          </right>
       </BorderPane>
    </bottom>
