--- a/Basketball/src/user_interface/Win.fxml
+++ b/Basketball/src/user_interface/Win.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="790.0" style="-fx-background-color: #FF8000;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="790.0" style="-fx-background-color: #FF8000;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ControllerWindow">
    <center>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -47,7 +47,7 @@
             <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <TextField GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <TextField GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" style="-fx-background-color: #000000;" text="NEW" textFill="WHITE" GridPane.rowIndex="8" />
+            <Button fx:id="newaction" mnemonicParsing="false" onAction="#helloworld" prefHeight="26.0" prefWidth="100.0" style="-fx-background-color: #000000;" text="NEW" textFill="WHITE" GridPane.rowIndex="8" />
             <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="99.0" style="-fx-background-color: #000000;" text="SAVE" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="8" />
             <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" style="-fx-background-color: #000000;" text="IMAGE" textFill="WHITE" GridPane.rowIndex="9" />
             <Button fx:id="delate" mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" style="-fx-background-color: #000000;" text="DELATE" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="9" />
