--- a/Basketball/src/user_interface/Win.fxml
+++ b/Basketball/src/user_interface/Win.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="790.0" style="-fx-background-color: #FF8000;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ControllerWindow">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="920.0" style="-fx-background-color: #FF8000;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ControllerWindow">
    <center>
-      <GridPane BorderPane.alignment="CENTER">
+      <GridPane prefHeight="342.0" prefWidth="333.0" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -34,41 +34,41 @@
             <Label text="NAME" />
             <Label text="AGE" GridPane.rowIndex="1" />
             <Label text="TEAM" GridPane.rowIndex="2" />
-            <Label text="Passes" GridPane.rowIndex="3" />
-            <Label text="Baskets" GridPane.rowIndex="4" />
-            <Label text="Games" GridPane.rowIndex="5" />
-            <Label text="Wins" GridPane.rowIndex="6" />
-            <Label text="Lose" GridPane.rowIndex="7" />
-            <TextField GridPane.columnIndex="1" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <Button fx:id="newaction" mnemonicParsing="false" onAction="#helloworld" prefHeight="26.0" prefWidth="100.0" style="-fx-background-color: #000000;" text="NEW" textFill="WHITE" GridPane.rowIndex="8" />
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="99.0" style="-fx-background-color: #000000;" text="SAVE" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" style="-fx-background-color: #000000;" text="IMAGE" textFill="WHITE" GridPane.rowIndex="9" />
+            <Label text="Games" GridPane.rowIndex="3" />
+            <Label text="Player Efficiency Rating" GridPane.rowIndex="4" />
+            <Label text="True Shooting Percentage" GridPane.rowIndex="5" />
+            <Label text="Offensive Rebound Percentage" GridPane.rowIndex="6" />
+            <Label text="Deffensive Rebound Percentage" GridPane.rowIndex="7" />
+            <TextField fx:id="name" GridPane.columnIndex="1" />
+            <TextField fx:id="age" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="team" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="games" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="per" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="trp" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="orp" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextField fx:id="drp" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <Button fx:id="novel" mnemonicParsing="false" onAction="#helloworld" prefHeight="26.0" prefWidth="100.0" style="-fx-background-color: #000000;" text="NEW" textFill="WHITE" GridPane.rowIndex="8" />
+            <Button fx:id="save" mnemonicParsing="false" prefHeight="26.0" prefWidth="99.0" style="-fx-background-color: #000000;" text="SAVE" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <Button fx:id="image" mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" style="-fx-background-color: #000000;" text="IMAGE" textFill="WHITE" GridPane.rowIndex="9" />
             <Button fx:id="delate" mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" style="-fx-background-color: #000000;" text="DELATE" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="9" />
          </children>
       </GridPane>
    </center>
    <left>
-      <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <BorderPane prefHeight="342.0" prefWidth="62.0" BorderPane.alignment="CENTER">
          <center>
-            <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
+            <ImageView fx:id="profile" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
          </center>
          <left>
-            <Button mnemonicParsing="false" style="-fx-background-color: #000000;" text="BEFORE" textFill="WHITE" BorderPane.alignment="CENTER" />
+            <Button fx:id="before" mnemonicParsing="false" style="-fx-background-color: #000000;" text="BEFORE" textFill="WHITE" BorderPane.alignment="CENTER" />
          </left>
          <right>
-            <Button mnemonicParsing="false" style="-fx-background-color: #000000;" text="NEXT" textFill="WHITE" BorderPane.alignment="CENTER" />
+            <Button fx:id="next" mnemonicParsing="false" style="-fx-background-color: #000000;" text="NEXT" textFill="WHITE" BorderPane.alignment="CENTER" />
          </right>
       </BorderPane>
    </left>
    <right>
-      <ImageView fitHeight="345.0" fitWidth="312.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+      <ImageView fitHeight="345.0" fitWidth="283.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
          <image>
             <Image url="@../../Files/Image/FIBA.jpg" />
          </image>
@@ -77,13 +77,13 @@
    <bottom>
       <BorderPane prefHeight="57.0" prefWidth="598.0" BorderPane.alignment="CENTER">
          <left>
-            <ComboBox prefHeight="26.0" prefWidth="280.0" promptText="CHOOSE A TYPE OF SEARCH" style="-fx-background-color: #000000;" BorderPane.alignment="CENTER" />
+            <ComboBox fx:id="type" prefHeight="26.0" prefWidth="280.0" promptText="CHOOSE A TYPE OF SEARCH" style="-fx-background-color: #000000;" BorderPane.alignment="CENTER" />
          </left>
          <center>
-            <TextField BorderPane.alignment="CENTER" />
+            <TextField fx:id="input" BorderPane.alignment="CENTER" />
          </center>
          <right>
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="183.0" style="-fx-background-color: #000000;" text="SEARCH" textFill="WHITE" BorderPane.alignment="CENTER" />
+            <Button fx:id="search" mnemonicParsing="false" prefHeight="26.0" prefWidth="183.0" style="-fx-background-color: #000000;" text="SEARCH" textFill="WHITE" BorderPane.alignment="CENTER" />
          </right>
       </BorderPane>
    </bottom>
