--- a/Basketball/src/user_interface/Win.fxml
+++ b/Basketball/src/user_interface/Win.fxml
@@ -49,7 +49,7 @@
             <TextField fx:id="drp" GridPane.columnIndex="1" GridPane.rowIndex="7" />
             <Button fx:id="novel" mnemonicParsing="false" onAction="#helloworld" prefHeight="26.0" prefWidth="100.0" style="-fx-background-color: #000000;" text="NEW" textFill="WHITE" GridPane.rowIndex="8" />
             <Button fx:id="save" mnemonicParsing="false" prefHeight="26.0" prefWidth="99.0" style="-fx-background-color: #000000;" text="SAVE" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-            <Button fx:id="image" mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" style="-fx-background-color: #000000;" text="IMAGE" textFill="WHITE" GridPane.rowIndex="9" />
+            <Button fx:id="image" mnemonicParsing="false" onAction="#chooseImage" prefHeight="26.0" prefWidth="100.0" style="-fx-background-color: #000000;" text="IMAGE" textFill="WHITE" GridPane.rowIndex="9" />
             <Button fx:id="delate" mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" style="-fx-background-color: #000000;" text="DELATE" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="9" />
          </children>
       </GridPane>
